<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Botonera Gente Sexy/Tres Empanadas</string>
    <string name="appbar_title">Botonera Gente Sexy</string>
    <string name="action_settings">Enviar sugerencia</string>
    <string name="infoCompartir">Como compartir</string>
    <string name="title_activity_second">Para con la ambición y compartí este audio</string>
    <string name="nestor1">¿Y Nestor está ?</string>
    <string name="nestor2">Nestor acaba de morir</string>
    <string name="como">¡¿Cómo?!</string>
    <string name="marecoPorDios">Uf, por Diós</string>
    <string name="perosenor">¡Pero señor!</string>
    <string name="comoprogresaste">Como progresaste en la vida</string>
    <string name="rica">Rica rica, AMARGA</string>
    <string name="hablesenor">Hable señor!</string>
    <string name="udesunpelotudo">Pero usted es un pelotudo!</string>
    <string name="cipayo">Sos un pelotudo y un cipayo</string>
    <string name="dequehabla">No se de que habla</string>
    <string name="otrodia">Otro día hablamos</string>
    <string name="cachetes">Tirate un pedo</string>
    <string name="travesti">Gordo travesti</string>
    <string name="eueeue">Eue eue!</string>
    <string name="gordomerquero">Gordo merquero</string>
    <string name="luppi">¿Y Luppi conocía esta historia?</string>
    <string name="milcasos">Conozco mil casos</string>
    <string name="negros43">43 negros</string>
    <string name="enelaire">Pero estamos en el aire</string>
    <string name="comosenor">¿Como señor?</string>
    <string name="memelaspelotas">Me me me las pelotas</string>
    <string name="familiapelotudos">Familia de pelotudos</string>
    <string name="genteadentro">Por que mierda tienen tanta gente</string>
    <string name="noteaguanto">No te aguanto</string>
    <string name="boludopelotudo">Callate, boludo pelotudo</string>
    <string name="sevennegras">Se pueden ver que son negras</string>
    <string name="indigena">Negro de mierda indigena</string>
    <string name="mevuelvoloco">Me vuelvo loco</string>
    <string name="pelotudo">Pelotudo</string>
    <string name="fiestas">Las fiestas..</string>
    <string name="califica_title">Califica la aplicación</string>
    <string name="califica_body">Si te gusto la botonera, te pido que aflojes con el inchi winchi por un segundo y me ayudes calificandola. También podes sugerir algún nuevo sonido o un cambio que quieras para una actualización!</string>
    <string name="estarahi">Quiero estar ahí</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="mail_feedback_email">lucas.saka21@gmail.com</string>
    <string name="mail_feedback_subject">Feedback Botonera GS</string>
    <string name="title_send_feedback">Enviá tu sugerencia</string>
    <string name="crash_dialog_text">Hubo un problema durante la ejecución de la aplicación. Por favor, te pido que envíes el mail con la informacion del error. Son solo unos segundos y puede ayudar a encontrar el problema. Muchas gracias!</string>
    <string name="crash_dialog_title">Botonera Gente Sexy tuvo un problema</string>
    <string name="crash_dialog_ok_toast">Estoy feeeliz, eue eue! Gracias por enviar el reporte!</string>

</resources>
