<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center_horizontal">
        <!--style="@style/MyMaterialTheme"-->

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nestor1"
                android:id="@+id/button1"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:onClick="sendMessage"
                android:layout_column="5"
                android:layout_weight="0.5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comoprogresaste"
                android:id="@+id/button6"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:onClick="sendMessage"
                android:layout_column="6"
                android:layout_weight="0.5" />

        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nestor2"
                android:id="@+id/button2"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:onClick="sendMessage"
                android:layout_column="5"
                android:layout_weight="0.5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rica"
                android:id="@+id/button7"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:onClick="sendMessage"
                android:layout_column="6"
                android:layout_weight="0.5" />

        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/como"
                android:id="@+id/button3"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:onClick="sendMessage"
                android:layout_column="5"
                android:layout_weight="0.5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hablesenor"
                android:id="@+id/button8"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:onClick="sendMessage"
                android:layout_column="5"
                android:layout_weight="0.5" />

        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marecoPorDios"
                android:id="@+id/button4"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:onClick="sendMessage"
                android:layout_column="5"
                android:layout_weight="0" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perosenor"
                android:id="@+id/button5"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:onClick="sendMessage"
                android:layout_column="5" />
        </TableRow>
    </TableLayout>
